kernel:Kconfig: Disable KSU_SUSFS_SUS_SU by default

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -115,7 +115,7 @@ config KSU_SUSFS_ENABLE_LOG
 config KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS
     bool "Enable to automatically hide ksu and susfs symbols from /proc/kallsyms"
     depends on KSU_SUSFS
-    default y
+    default n
     help
       - Automatically hide ksu and susfs symbols from '/proc/kallsyms'.
       - Effective on all processes.
